--- a/index.html
+++ b/index.html
@@ -15,35 +15,16 @@
       href="https://ckeditor.com/assets/images/favicons/96x96.png"
       sizes="96x96"
     />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      href="https://ckeditor.com/assets/images/favicons/120x120.png"
-      sizes="120x120"
-    />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      href="https://ckeditor.com/assets/images/favicons/152x152.png"
-      sizes="152x152"
-    />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      href="https://ckeditor.com/assets/images/favicons/167x167.png"
-      sizes="167x167"
-    />
-    <link
-      rel="apple-touch-icon"
-      type="image/png"
-      href="https://ckeditor.com/assets/images/favicons/180x180.png"
-      sizes="180x180"
-    />
     <link rel="stylesheet" href="./style.css" />
-    <link
+    <link rel="stylesheet" href="./content.css"/>
+    <link rel="stylesheet" href="./ckeditor5.css">
+     <!-- prismjs highlight code -->
+<link href='https://cdn.jsdelivr.net' rel='preconnect'/>
+<link crossorigin='anonymous' href='https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.min.css' rel='stylesheet'/>
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.ckeditor.com/ckeditor5/43.0.0/ckeditor5.css"
-    />
+    /> -->
 	
   </head>
   <body>
@@ -71,6 +52,10 @@
       }
     </script>
     <script type="module" src="./main.js"></script>
+          <!-- prismjs highlight code -->
+  <script src='https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-core.min.js'>
+  </script>
+  <script src='https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js'></script>
 
     <!-- A friendly reminder to run on a server, remove this during the integration. -->
     <script>
