--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="editor-container__editor">
             <div id="editor"></div>
             <button id="previewBtn">Preview</button>
-            <div id="previewContent" style="padding: 10px; margin-top: 10px;"> </div>
+            <!-- <div id="previewContent" style="padding: 10px; margin-top: 10px;"> </div> -->
           </div>
       </div>
     </div>
